# multi-agent-chat

./: .cursorrules  .dockerignore  .env.example  .gitignore  Dockerfile  README.md  chainlit.md  docker-compose.yml  pyproject.toml
.chainlit/: config.toml
.notes/: multi-agent-chat.md
src/: app.py
src/agents/: concierge_agent.py  maintenance_agent.py  room_service_agent.py  supervisor_agent.py
src/agents/tools/: get_website.py  user_input.py  web_search.py
src/models/: hotel_models.py
