[tool.poetry]
name = "multi-agent-chat"
version = "0.1.0"
description = "A multi-agent system demo using PydanticAI and Chainlit"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "src"}]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
pydantic-ai = "0.0.23"
chainlit = "2.2.0"
openai = "^1.12.0"
python-dotenv = "^1.0.0"
typing-extensions = "^4.9.0"
aiohttp = "^3.9.3"
crawl4ai = "^0.3.0"

[tool.poetry.group.dev.dependencies]
black = "^24.1.1"
ruff = "^0.2.1"
mypy = "^1.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
select = ["E", "F", "I", "N", "W", "B"]
line-length = 100
target-version = "py311"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
warn_unreachable = true